Revert "fix: Correct mobile animation and dark mode colors"

--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,6 @@
   .img-container::after {
     background: rgba(0, 0, 0, 0.871); /* Keep original overlay color in dark mode */
   }
-
-  .img-content h3 {
-    color: #fff;
-  }
 }
 
 * {
@@ -789,15 +785,5 @@ body {
 
   .food-type {
     margin: 20px auto;
-  }
-
-  .img-container::after {
-    opacity: 1;
-    transform: scaleY(1);
-  }
-
-  .img-container .img-content {
-    opacity: 1;
-    top: 40%;
   }
 }
